# note-it

./: .gitignore  README.md  pyproject.toml  test.py
note_it/conversion/: convert.py  postprocessing.py
note_it/conversion/output/: page_0.md  page_1.md  page_2.md
note_it/frontend/: ace_test.py  upload.py  viewer.py
note_it/frontend/pages/: split_view.py
note_it/frontend/prompts/: extract_metaprompt.txt  extract_prompt.txt  fix_headings.txt
